# agent-dock

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: 技术复盘与进度.md  硬件接线指南.md  项目规划.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/AgentDock/: platformio.ini
firmware/AgentDock/src/: User_Setup.h  config.h  display_mgr.cpp  display_mgr.h  main.cpp  sprite.cpp  sprite.h  ui.cpp  ui.h  web_server.cpp  web_server.h  wifi_mgr.cpp  wifi_mgr.h  ws_proto.cpp  ws_proto.h
firmware/components/ble_gatt/: CMakeLists.txt  ble_gatt.c  ble_gatt.h
firmware/components/board/: CMakeLists.txt  board.c  board.h
firmware/components/display/: CMakeLists.txt  display.c  display.h
firmware/components/power_meter/: CMakeLists.txt  power_meter.c  power_meter.h
firmware/components/ui/: CMakeLists.txt  ui.c  ui.h
firmware/components/usb_cdc/: CMakeLists.txt  usb_cdc.c  usb_cdc.h
firmware/main/: CMakeLists.txt  app_config.c  app_config.h  idf_component.yml  main.c
hardware/: My-ble-modular-power-strip.eprj2  README.md
hardware/reference/: 开源硬件参考.md
hardware/schematic/: 设计文档.md
pc-app/: README.md  agent_monitor.py  agentd.py  main.py  requirements.txt  ws_test.py
web-app/: index.html
